--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-data": "^1.2.1",
+    "gulp-filter": "^3.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
+    "gulp-sharp": "^0.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.1",
