--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.1",
+    "js-yaml": "^3.4.6",
     "postcss-assets": "^3.0.3"
   },
   "scripts": {
