--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.1",
     "js-yaml": "^3.4.6",
+    "lost": "^6.6.3",
     "postcss-assets": "^3.0.3"
   },
   "scripts": {
