補上部份來賓的身平簡介

--- a/app/talk_data.yml
+++ b/app/talk_data.yml
@@ -58,6 +58,14 @@
   polis_id: "8kxha2"
   polis_result: "talk03.json"
   intro: "「產業升級」、「產業創新」、「產業轉型」，相信這幾個口號你一定不會陌生。政府的口喊了這麼多年，但台灣的產業不管是升級創新還是轉型，雖然有廠商成功轉型，卻無法擴展成局，帶領整個產業提昇規模。但你知道最近又有新的口號：「生產力4.0」甚至是朱立倫的「三弓四箭」出現嗎？全球化的浪潮下，各國為了提昇產業競爭力，紛紛提出21世紀的新工業革命：工業4.0。台灣雖然也看到了這股浪潮，緊接在2015年著提出「生產力4.0」計畫，但回顧1980年代到現在，台灣的產業升級了什麼，又失去了什麼，相信身在相關產業的人士一定「很有感」。難看的經濟成長率、下降的外部投資與人才流失，究竟台灣產業的出路在哪裡，如何面對全球化的競爭，且聽童子賢怎麼說！"
+  bio: >
+    童子賢<br>
+    台灣企業家及慈善工作者，1989年創立華碩電腦。
+    <ul>
+      <li>學歷: 台北科技大學電通所碩士、台北科技大學工學榮譽博士</li>
+      <li>經歷: 宏碁電腦高級工程師、華碩創辦人、華碩電腦董事長</li>
+      <li>現職：和碩聯合科技董事長暨集團總執行長、台北市電腦公會理事長、晶碩光學、捷揚光電等公司董事長</li>
+    </ul>
   url: "http://talkto.tw/talk/03"
   ogimage_url: "http://talkto.tw/ogimage-03.jpg"
 -
@@ -71,6 +79,14 @@
   polis_id: "4tpf7frf8a"
   polis_result: "talk04.json"
   intro: "1989年，李幸長發動無住屋者運動，上萬名「無殼蝸牛」走上街頭並夜宿忠孝東路，要求合理房價與居住權益。「居住權益」首次躍上主流媒體，同時也讓政治人物與人民開始關注居住議題。25年來，無住屋者運動歷經三任總統，兩次政黨輪替，然而房價從未停止上漲。受薪階級的薪資無法追上房價，炒房卻成了全民運動，比起25年前有過之而無不及。期間更發生如文林苑都更等爭議，讓居住議題更形複雜。2014年，「巢運」對居住政策提出挑戰，「居住正義」成為顯學，但到底該怎麼做，政治人物除了宣示打房、廣建社會住宅等承諾之外，對於落實居住正義並沒有發揮太大效用。台北市為台灣房價最高的區域，也是居住痛苦指數最高的地方。如何落實居住正義，台北經驗將是重要的參考依據。台北市都市發展局局長林洲民有什麼錦囊妙計，我們禮拜三晚上見分明。"
+  bio: >
+    <p>
+    臺北市政府都市發展局 林洲民局長<br>
+    Jou Min Lin AIA, Commissioner of the Department of Urban Development, Taipei City Government
+    </p>
+    <p>
+    林洲民建築師事務所 ( J. M. Lin Architect, P.C. ) 於 1995 年成立於紐約,仲觀設 計顧問有限公司及仲觀聯合建築師事務所分別於 1997 年及 2002 年成立於台北, 兩地團隊皆由林洲民擔任主持建築師。2004 年起,仲觀團隊展開長達八年的國 立海科館園區建築案,成功保存歷史建築並將其轉型為文化活動園區。仲觀在其 他設計領域也有豐碩的成果,從博物館、交通運輸建設、表演空間、住宅與商辦、 學校、企業形象識別系統、公園與景觀設計等,以實驗性的建築設計與工法自我 挑戰,企圖激盪建築的各種可能。仲觀團隊的表現獲得諸多國際獎項的肯定,包 括 2006 年美國紐約建築師協會紐約分部年度設計獎、2007 年獲美國紐約州建 築師協會都市規劃與設計傑出獎,以及 2013 年獲美國紐約建築師協會都市設計 類榮譽獎。2014 年,林洲民建築師獲邀加入柯市府團隊,擔任臺北市政府都市 發展局局長,主要負責推動公辦都更、公共住宅及 2050 願景計畫,持續以對環 境觀察的敏銳度,在台灣這塊土地上創造更美好的生活空間。
+    </p>
   url: "http://talkto.tw/talk/04"
   ogimage_url: "http://talkto.tw/ogimage-04.jpg"
 -
@@ -84,6 +100,15 @@
   polis_id: "2mekvf"
   polis_result: "talk05.json"
   intro: "彰化地院11月底對頂新做出無罪判決，將民眾的不滿掀到最高點，「秒買秒退」的抵制行動就是來自最草根的怒吼。但是別忘了，頂新所引發的劣質油案，只是近年來一系列食安問題的一環，當憤怒於頂新無罪時，我們可能忘了2004年發生過戴奧辛毒牛奶、鴨蛋事件，2007年的瘦肉精事件，2008年的三聚氰胺毒奶事件、2011年的塑化劑事件、2013年的大統油事件、2014年的連鎖茶飲食安事件....每次都是群情激憤，政府大動作宣誓，但，事過境遷後，下個食安醜聞照樣爆。這些教訓告訴我們的是，台灣食安出了系統性的問題，若沒全面性的解決，爆出下一個食安事件只是時間早晚而已。義美老總高志明，將從食品業者的角度，剖析台灣食安系統哪裡出了漏洞？這些問題又該如何解決？"
+  bio: >
+    <ul>
+      <li>義美食品(股)公司 總經理</li>
+      <li>台灣英文台灣日報 發行人</li>
+      <li>網擎資訊軟體(股) 董事長</li>
+      <li>義美聯合電子商務(股)公司 董事長</li>
+      <li>義美環境保護基金會 執行長</li>
+      <li>台灣公益廣告協會 理事長</li>
+    </ul>
   url: "http://talkto.tw/talk/05"
   ogimage_url: "http://talkto.tw/ogimage-05.jpg"
 -
@@ -97,6 +122,24 @@
   polis_id: "8beafmmdms"
   polis_result: "talk06.json"
   intro: "1987年，時任民進黨增額立委的朱高正在立法院跳上主席台並揮出第一拳，就此打響國會改革議題。1991年，當了43年的第一屆立法委員全數退職，「萬年國會」成為歷史，寫下國會改革的新頁。然而，歷經多次修憲與體制調整的立法院，從立委任職年數延長、席次減半，乃至從「複數選區不可讓渡制」改為「單一選區兩票制」，表面上看來立法院應該是越改越好，但為什麼從許多的民調顯示，人民仍然不信任國會，需要人民自組團體來監督國會？甚至在2014年3月18日，服貿事件引發人民不滿與疑慮並且佔領立法院，人民對立法院的不信任升到最高點。大家都在問：「我們的國會怎麼了？」國會是國家政治的火車頭，沒有高品質的國會，就不會有高品質的法案為人民服務，也無法有效監督政府。改革雖迫在眉梢，但到底該怎麼做，且聽曾任立委多年的林濁水先生來為您一一分析，並提出他的解決之道。"
+  bio: >
+    <p>林濁水，1947年生，台灣南投縣埔里人</p>
+    <h3>學經歷：</h3>
+    <ul>
+      <li>台灣政治大學畢業</li>
+      <li>新潮流雜誌總編輯</li>
+      <li>台灣國會立法委員1993〜2006</li>
+      <li>民進黨中央評議委員1986〜1992</li>
+      <li>民進黨政策會執行長2001〜2003</li>
+      <li>民進黨台灣獨立黨綱起草人（1991）</li>
+    </ul>
+    <p>現職：專欄作者</p>
+    <h3>著作：</h3>
+    <ul>
+      <li>瓦解的帝國</li>
+      <li>世界圖像下的台灣共同體</li>
+      <li>歷史劇場－痛苦執政八年</li>
+    </ul>
   url: "http://talkto.tw/talk/06"
   ogimage_url: "http://talkto.tw/ogimage-06.jpg"
 -
