--- a/app/talk_data.yml
+++ b/app/talk_data.yml
@@ -4,6 +4,7 @@
   program_topic: "醫療"
   guest: "柯文哲"
   title: "台灣醫療崩壞，健保亂象如何解決？"
+  bg_position: 20% 50%
   highlight_id: "EGfermw3XQk"
   complete_id: "eQ-qiTG4mE0"
   polis_id: "73rxk6"
@@ -53,6 +54,7 @@
   program_topic: "產業"
   guest: "童子賢"
   title: "面對經濟全球化時代，產業創新的挑戰，台灣的出路在哪裡？"
+  bg_position: 30% 50%
   highlight_id: "CSKkdu1oGNk"
   complete_id: "8W1vtm-s0XU"
   polis_id: "8kxha2"
@@ -74,6 +76,7 @@
   program_topic: "居住"
   guest: "林洲民"
   title: "資本遊戲中，被犧牲的居住正義該如何實現？"
+  bg_position: 60% 50%
   highlight_id: "3vTU9bClPLY"
   complete_id: "mRDm4-Cvt4E"
   polis_id: "4tpf7frf8a"
@@ -95,6 +98,7 @@
   program_topic: "食安"
   guest: "高志明"
   title: "食安危機連環爆，台灣該如何吃的安心？"
+  bg_position: 40% 50%
   highlight_id: "PjqSpaJIGBw"
   complete_id: "-t_KPxKcvcE"
   polis_id: "2mekvf"
