--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-babel": "^6.1.1",
     "gulp-data": "^1.2.1",
     "gulp-filter": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-plumber": "^1.0.1",
