--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "^3.4.6",
     "lost": "^6.6.3",
     "postcss-assets": "^3.0.3",
+    "postcss-devtools": "^1.0.0",
     "slick-carousel": "^1.5.9"
   },
   "scripts": {
