--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "normalize-scss": "^4.0.3"
   },
   "devDependencies": {
+    "argv": "0.0.2",
     "autoprefixer": "^6.2.3",
     "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.10.1",
