--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.10.1",
     "css-mqpacker": "^4.0.0",
+    "cssnano": "^3.4.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
