--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.1.1",
     "gulp-sharp": "^0.1.0",
     "gulp-sourcemaps": "^1.6.0",
